cards dos eventos no feed: fotos para ilustrar o local do evento

--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -100,26 +100,31 @@
         </div>
         <!--Eventos-->
         <div class="col-md-3 mt-5">
-                <div class="card" style="width: 18rem;">
-                    <!--Evento 1-->
-                        <div class="card-body">
+                <!--Evento 1-->
+            <div class="card" style="width: 18rem;">
+                    <img src="../../assets/image/bannerekack.jpg" alt="">
+                        <div class="card-body"> 
                           <h5 class="card-title mt-2"> <strong>HTML5/CSS3/Javascript</strong> </h5>
-                          <p class="card-text"><strong>Local: </strong> Rua Vergueiro, 1421, 12º Andar </p>
+                          <p class="card-text"><strong>Local: </strong>Estação Hack</p>
+                          <p>Av. Paulista, 1374 - Bela Vista, São Paulo - SP, 01310-100</p>
                           <p><strong>Data: </strong>10/03/2020</p>
                         </div>
                       </div>
 
                       <!--Evento 2-->
                       <div class="card mt-2" style="width: 18rem;">
+                        <img src="../../assets/image/bannerekack.jpg" alt="">
                         <div class="card-body">
                           <h5 class="card-title mt-2"> <strong>Carreira: Desenvolvedor Front End</strong> </h5>
-                          <p class="card-text"><strong>Local: </strong> Rua Tuiuti, 1400, 10º Andar </p>
+                          <p class="card-text"><strong>Local: </strong>Estação Hack</p>
+                          <p>Av. Paulista, 1374 - Bela Vista, São Paulo - SP, 01310-100</p>
                           <p><strong>Data: </strong>22/03/2020</p>
                         </div>
                       </div>
 
                       <!--Evento 3-->
                       <div class="card mt-2" style="width: 18rem;">
+                        <img src="../../assets/image/ccj3.jpg" alt="" >
                             <div class="card-body">
                               <h5 class="card-title mt-2"> <strong>Rolê: Mulheres pretas na tecnologia</strong> </h5>
                               <p class="card-text"><strong>Local: </strong> CCJ - Centro Cultural da Juventude Ruth Cardoso </p>
